# cralgebra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  costs.toml  costs.zen2.toml
examples/: bench.rs
src/: costs.rs  lib.rs
src/algorithms/: miller_rabin.rs  mod.rs
src/dists/: discrete_gaussian_dyn.rs  mod.rs
src/misc/: discrete_gaussian_dyn.rs  mod.rs  standard_dyn.rs
src/old/: factorization.rs  gaussian.rs  gcd.rs  large.rs  lib.rs  matrix.rs  modular.rs  modular_dyn.rs  montgomery.rs  op_costs.rs  poly_ring.rs  primality.rs  roots_of_unity.rs  vector.rs  widening_mul.rs  wrapping_mul.rs
src/ops/: centered_mul_dyn.rs  closed_add_dyn.rs  closed_mul_dyn.rs  closed_sub_dyn.rs  cyclic_ord_dyn.rs  cyclic_ord_zero_dyn.rs  euclid_dyn.rs  inv_dyn.rs  mod.rs  one_dyn.rs  order_dyn.rs  outer_euclid_dyn.rs  outer_mul_dyn.rs  pow_dyn.rs  zero_dyn.rs
src/types/: cyclotomic.rs  mod.rs  modular_dyn.rs  montgomery_dyn.rs  z2_128.rs  z2_16.rs  z2_32.rs  z2_64.rs  z2_64n.rs  z2_8.rs
