[package]
name = "cralgebra"
version = "0.1.0"
edition = "2021"

[dependencies]
#bit_reverse = "0.1.8"
#bytemuck = "1.19.0"
#itertools = { version = "0.13.0", default-features = false }
#noether = "0.2.0"
#num-traits = "0.2.19"
rand = { version = "0.8.5", default-features = false }
static-toml = "1.3.0"
