[package]
name = "cralgebra"
version = "0.1.1"
authors = ["Aritz Erkiaga Fernández <aerkiaga3@gmail.com>"]
edition = "2024"
description = "A fast crypto algebra library"
repository = "https://github.com/aerkiaga/cralgebra"
license = "AGPL-3.0-only"
keywords = ["crypto", "algebra"]
categories = ["cryptography", "mathematics"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
rand = { version = "0.8.5", default-features = false }
